# GLUE

./: .Rprofile  .flake8  .gitignore  .readthedocs.yml  LICENSE  README.md  env.yaml  export_env.sh  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml
.history/: pyproject_20240223083840.toml
.history/scglue/: genomics_20240208225135.py  utils_20240208225216.py  utils_20240223084149.py
conda-build/: README.md
conda-build/scglue/: meta.yaml
custom/: .gitignore  README.md  pack.sh
custom/2020_mmdma_pytorch/: README.md  evaluate.py  manifold_align_mmd_pytorch.py
custom/pamona/: Pamona.py  __init__.py  eval.py  utils.py  visualization.py
data/: .gitignore  README.md  Snakefile  config.yaml
data/collect/: .gitignore  10x-ATAC-Brain5k.ipynb  10x-Multiome-Pbmc10k.ipynb  Cao-2020.ipynb  Chen-2019.ipynb  Domcke-2020.ipynb  Luo-2017.ipynb  Ma-2020.ipynb  Muto-2021.ipynb  README.md  Saunders-2018.ipynb  Yao-2021.ipynb
data/download/: README.md
data/function/: README.md
data/genome/: .gitignore  GRCh38.p12.genome.fa.fai  README.md  extract_genes_promoters.py  preprocess.sh
data/motif/: README.md  Snakefile  clean.py  config.yaml  fimo.py  merge.py
docker/: Dockerfile
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
docs/: .gitignore  api.rst  conf.py  credits.rst  data.rst  dev.rst  index.rst  install.rst  paired.ipynb  preprocessing.ipynb  reginf.ipynb  release.rst  test citeseq tutorial.ipynb  training.ipynb  tutorials.rst
docs/_static/: custom.css
docs/_templates/: README.md  class.rst  module.rst
docs/api/: scglue.check.Checker.check.rst  scglue.check.Checker.rst  scglue.check.CmdChecker.check.rst  scglue.check.CmdChecker.rst  scglue.check.rst  (+305 more)
evaluation/: README.md  custom
experiments/: .gitignore  README.md
packrat/: packrat.opts
scglue/: __init__.py  check.py  data.py  genomics.py  graph.py  lsi.py  metrics.py  num.py  plot.py  typehint.py  utils.py
tests/: conftest.py  fixtures.py  test_check.py  test_data.py  test_genomics.py  test_graph.py  test_metrics.py  test_num.py  test_plot.py  test_utils.py  utils.py
(+511 files in other folders)
